derive_tests/tests/compile_fail/custom_reference.stderr
error: proc-macro derive panicked
 --> tests/compile_fail/custom_reference.rs:3:10
  |
3 | #[derive(Validify)]
  |          ^^^^^^^^
  |
  = help: message: Fields containing modifiers must contain owned data
